# SCMeTA

./: .gitattributes  .gitignore  CHANGLOG.md  Dockerfile  README.md  main.ipynb.example  pyproject.toml  requirements-docker.txt  requirements.txt  sources.list
.github/workflows/: auto-assign.yml  build-and-push.yml
SCMeTA/: __init__.py
SCMeTA/accelerate/: __init__.py  mp.py  mt.py
SCMeTA/batch/: __init__.py  combat.py  numericalization.py
SCMeTA/config/: __init__.py  default.py  load.py  mz_filter.py
SCMeTA/core/: __init__.py  bk.py  cluster.py  match.py  mpl.py
SCMeTA/file/: __init__.py  database.py  format.py  process.py  thermo.py  waters.py
SCMeTA/file/plugin/: __init__.py  thermo_dotnet.py  thermo_linux.py
SCMeTA/lc/: lc_compare.py
SCMeTA/match/: connector.py
SCMeTA/method/: __init__.py  cell.py  combine_mat.py  cut.py  filter.py  idf.py  k_w_test.py  noise.py  normalize.py  round.py  to_mat.py
SCMeTA/method/fill/: __init__.py  knn.py
SCMeTA/method/machine_learning/: __init__.py  discriminate.py  graphical_model.py
SCMeTA/plot/Bokeh/: __init__.py  heatmap.py  range_tools.py
SCMeTA/plot/Mpl/: __init__.py  bar.py  box.py  heatmap.py  line.py  polygonization.py  radar.py  scatter.py  select.py  volcano.py
SCMeTA/search/: hmdb.py
tests/data/: HeLa.RAW  HepG2.RAW
