[tool.poetry]
name = "SCMeTA"
version = "0.2.3"
description = "A python package for single-cell metabolism analysis."
authors = ["EstrellaXD <estrellaxd05@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://www.sc-meta.org/"
repository = "https://github.com/SCMeTA/SCMeTA"
documentation = "https://www.sc-meta.org/"
keywords = ["single-cell", "metabolism", "analysis"]
packages = [
    { include = "SCMeTA", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pandas = "^2.1.0"
pyrawtools = "^0.2.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
combat = "^0.3.3"
scipy = "^1.11.2"
polars = "^0.19.1"
scikit-learn = "^1.3.0"
umap-learn = "^0.5.4"
pythonnet = "^3.0.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
